find_package(QT NAMES Qt6 Qt5 COMPONENTS Test REQUIRED)
find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Test REQUIRED)

set(test_libraries QEFI Qt${QT_VERSION_MAJOR}::Test)

add_executable(test_parse_boot_order test_parse_boot_order.cc)
add_executable(test_parse_boot_name test_parse_boot_name.cc)
add_executable(test_parse_boot_guid test_parse_boot_guid.cc)
add_executable(test_parse_boot_path test_parse_boot_path.cc)
add_executable(test_load_option_parsing test_load_option_parsing.cc)
add_executable(test_load_option_helpers test_load_option_helpers.cc)
add_executable(test_parse_boot_optional_data test_parse_boot_optional_data.cc)
add_executable(test_load_option_formating test_load_option_formating.cc)
add_executable(test_device_path_hardware test_device_path_hardware.cc)
add_executable(test_device_path_acpi test_device_path_acpi.cc)
add_executable(test_device_path_biosboot test_device_path_biosboot.cc)
add_executable(test_device_path_media test_device_path_media.cc)
add_executable(test_device_path_message test_device_path_message.cc)

add_test(ParseBootOrderTest test_parse_boot_order)
add_test(ParseBootNameTest test_parse_boot_name)
add_test(ParseBootGUIDTest test_parse_boot_guid)
add_test(ParseBootPathTest test_parse_boot_path)
add_test(LoadOptionParsingTest test_load_option_parsing)
add_test(LoadOptionHelpersTest test_load_option_helpers)
add_test(ParseBootOptionalDataTest test_parse_boot_optional_data)
add_test(LoadOptionFormatingTest test_load_option_formating)
add_test(HardwareDevicePathTest test_device_path_hardware)
add_test(ACPIDevicePathTest test_device_path_acpi)
add_test(BIOSBootDevicePathTest test_device_path_biosboot)
add_test(MediaDevicePathTest test_device_path_media)
add_test(MessageDevicePathTest test_device_path_message)

target_link_libraries(test_parse_boot_order ${test_libraries})
target_link_libraries(test_parse_boot_name ${test_libraries})
target_link_libraries(test_parse_boot_guid ${test_libraries})
target_link_libraries(test_parse_boot_path ${test_libraries})
target_link_libraries(test_load_option_parsing ${test_libraries})
target_link_libraries(test_load_option_helpers ${test_libraries})
target_link_libraries(test_parse_boot_optional_data ${test_libraries})
target_link_libraries(test_load_option_formating ${test_libraries})
target_link_libraries(test_device_path_hardware ${test_libraries})
target_link_libraries(test_device_path_acpi ${test_libraries})
target_link_libraries(test_device_path_biosboot ${test_libraries})
target_link_libraries(test_device_path_media ${test_libraries})
target_link_libraries(test_device_path_message ${test_libraries})
